Add check for long strings (more than 18 chars.) Adjusted commands to control 'Ellens skov'

--- a/templates/index.html
+++ b/templates/index.html
@@ -25,8 +25,8 @@
         <p>
             <input id="colorpicker" type="color" value="#0000ff"/>
             <button onClick="sendColor();">Ellen.Farve</button>
-            <button onClick="sendCmd('Ellen.Pause', 100);">Ellen.Pause</button>
-            <button onClick="sendCmd('Ellen.Prog', 3);">Ellen.Prog3</button>
+            <button onClick="sendCmd('E.D', 100);">Ellen.Delay</button>
+            <button onClick="sendCmd('E.P', 100);">Ellen.Prog 100</button>
         </p>
         <br>
         <p>
