Danny added some more commands to index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -49,18 +49,19 @@
                     <a class="waves-effect waves-light btn wind" data-cmd="0">button</a>
             </div>
             <div class="col s6 m4">
+
                     <blockquote>
-                            Lystræ  
-                    </blockquote>
-                    <a class="waves-effect waves-light btn">button</a>
-                    <a class="waves-effect waves-light btn">button</a>
-                    <a class="waves-effect waves-light btn">button</a>
+                    Selvkørende bil 1  
+            </blockquote>
+            <a class="waves-effect waves-light btn" data-cmd="Bil1:1">bil kør frem</a>
+            <a class="waves-effect waves-light btn" data-cmd="Bil1:2">bil kør tilbage</a>
+            <a class="waves-effect waves-light btn" data-cmd="Bil1:0">stop bil</a>
                     <blockquote>
-                            Selvkørende biler  
+                            Selvkørende bil 2  
                     </blockquote>
-                    <a class="waves-effect waves-light btn">button</a>
-                    <a class="waves-effect waves-light btn">button</a>
-                    <a class="waves-effect waves-light btn">button</a>
+                    <a class="waves-effect waves-light btn" data-cmd="Bil2:1">bil kør frem</a>
+                    <a class="waves-effect waves-light btn" data-cmd="Bil2:2">bil kør tilbage</a>
+                    <a class="waves-effect waves-light btn" data-cmd="Bil2:0">stop bil</a>
             </div>
         </div>
     </div>
